fix issue with images getting cut off in carousel

--- a/app/assets/stylesheets/styles/tournaments.scss
+++ b/app/assets/stylesheets/styles/tournaments.scss
@@ -23,6 +23,7 @@
     height: 100%;
     img {
       margin: 0 auto;
+      max-height: 100%;
     }
   }
 }
